# unpaircore

./: .gitignore  CMakeLists.txt  LICENCE  README.md
src/: inlinehook.c  library.c  library.cpp  memscan.c  proc.c
